# or_parabolicsmoother

./: CHANGELOG.rst  CMakeLists.txt  DynamicPath.cpp  DynamicPath.h  Makefile  ParabolicRamp.h  README.md  doxygen.conf  package.xml  setup.py
include/or_parabolicsmoother/: Config.h  ParabolicSmoother.h  ParabolicSmootherParameters.h
src/: DynamicPath.cpp  ParabolicRamp.cpp  ParabolicSmoother.cpp  ParabolicSmootherPlugin.cpp  mc_test.cpp
src/or_parabolicsmoother/prpy/: __init__.py  retimer.py
