<?xml version="1.0"?>
<package format="2">
  <name>or_parabolicsmoother</name>
  <version>1.1.0</version>
  <description>
    An OpenRAVE wrapper to a fast smoothing algorithm for robot manipulator
    trajectories under geometric constraints and bounded acceleration. It is
    based on code provided with the paper Fast Smoothing of Manipulator
    Trajectories using Optimal Bounded-Acceleration Shortcuts by K. Hauser and
    V. Ng-Thow-Hing, appearing in ICRA 2010.
  </description>
  <license>BSD</license>
  <url type="website">https://github.com/personalrobotics/or_parabolicsmoother</url>
  <url type="repository">https://github.com/personalrobotics/or_parabolicsmoother.git</url>
  <url type="bugtracker">https://github.com/personalrobotics/or_parabolicsmoother/issues</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="pkv@cs.cmu.edu">Pras Velagapudi</author>
  <author email="kris.hauser@duke.edu">Kris Hauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>openrave_catkin</depend>
</package>
